--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -2,7 +2,7 @@
 <%=f.label :title, "Title:"%>
 <%=f.text_field :title%>
 <%=f.label :released, "relased:"%>
-<%=f.text_field :relased%>
+<%=f.text_field :released%>
 <%=f.label :release_year, "Release Year:"%>
 <%=f.text_field :release_year%>
 <%=f.label :artist_name, "Artist:"%>
