--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,4 +1,4 @@
-<% if @post.errors.any? %>
+<% if @song.errors.any? %>
   <div id="error_explanation">
     <h2>
       <%= pluralize(@post.errors.count, "error") %>
