--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -16,7 +16,7 @@
 <%=f.label :title, "Title:"%>
 <%=f.text_field :title%>
 <%=f.label :released, "relased:"%>
-<%= f.check_box :relased %>
+<%= f.check_box :released %>
 <%=f.label :release_year, "Release Year:"%>
 <%=f.text_field :release_year%>
 <%=f.label :artist_name, "Artist:"%>
